--- a/Test.html
+++ b/Test.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<h1><3 TOBY <3</h1>
-	<h2>A Journey</h2>
+	<h2>A Journey of Life</h2>
 	<p>Here is a website dedicated to the one and only little lap dog, <b>Toby</b>. <br>I hope you aren't a 70 pound small wenie dog. I hope that you make it to at least 80 pounds.</p>
 	<a href="https://www.akc.org/dog-breeds/doberman-pinscher/" target="_blank" title="Doberman Information.">Here is a link that takes you to a description of Doberman Pinschers!</a>
 	<p>Sincerely, 
