--- a/Test.html
+++ b/Test.html
@@ -5,15 +5,13 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Toby the Doby</title>
-
-	<link rel="stylesheet" type="text/css" href="css/test.css">
 	
 
 </head>
 
 <body>
 	<div class="brown-box"><h1><3 TOBY <3</h1></div>
-	<div class="white-box"><h2 font: fantasy>A Journey of Life</h2>
+	<div class="white-box"><h2>A Journey of Life</h2>
 	<p>Here is a website dedicated to the one and only little lap dog, <b>Toby</b>. <br>I hope you aren't a 70 pound small wenie dog. I hope that you make it to at least 80 pounds.</p>
 	<a href="https://www.akc.org/dog-breeds/doberman-pinscher/" target="_blank" title="Doberman Information.">Here is a link that takes you to a description of Doberman Pinschers!</a>
 	<p>Sincerely, 
