--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Toby the Doby</title>
 	<link rel="icon" href="img/Toby.jpeg">
+	<link rel="stylesheet" type="text/css" href="css/toby.css">
 </head>
 <body>
 	<!-- header element-->
 	<header>
-		<img src="img/Toby.jpeg">
+		<img src="img/Toby.jpeg"
+		width="500px">
 		<h1>Tobias Norman</h1>
 
 	</header>
@@ -18,8 +20,8 @@
 	<main>
 		<h2>About Toby</h2>
 		<p>Toby is the best little lap dog that has ever lived. He is so cute and will only be a little lap dog</p>
-		<img src="img/Toby-2.jpeg">
-		<p>Toby and His Family</p>
+		<img src="img/Toby-2.jpeg"
+		width="500px">
 		<h2>Toby's Characteristics</h2>
 		<ol>
 
@@ -45,7 +47,7 @@
 
 	<!-- Footer Element -->
 	<footer>
-		<p>This sight was created for practice on website coding.&copy; Ryan</p>
+		<p>This sight was created for practice on website coding</p>
 	</footer>
 
 </body>
